syntax = "proto3";

option go_package = "github.com/semenovem/portal/proto/audit_grpc";

package proto;

service Audit {
  rpc RawString (RawRequest) returns (RawResponse) {}
}

message RawRequest {
  string ID = 1;
  string Payload = 2;
}

message RawResponse{
  uint32 Ok = 1;
}
